--- a/style.css
+++ b/style.css
@@ -8,10 +8,19 @@ body {
   font-style: normal;
   overflow: hidden;
   height: 100vh;
+  background-color: #222831;
+  color: #f2f2f2;
+  font-size: 22px;
 }
 
 #status {
-  text-align: center;
+  background-color: #393e46;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
 }
 
 .main {
@@ -20,4 +29,31 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+button {
+  background-color: #f96d00;
+  color: #f2f2f2;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 200px;
+}
+
+.first-color {
+  background: #222831;
+}
+
+.second-color {
+  background: #393e46;
+}
+
+.third-color {
+  background: #f96d00;
+}
+
+.fourth-color {
+  background: #f2f2f2;
 }
